[gd_scene load_steps=4 format=3 uid="uid://cqkowxyrsrbar"]

[ext_resource type="Script" path="res://Objects/CoalStuff/coal.gd" id="1_5c401"]
[ext_resource type="Texture2D" uid="uid://bp3gvimjcytw" path="res://Objects/CoalStuff/Coal.png" id="1_hm1gy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xg2tj"]

[node name="Coal" type="RigidBody2D" groups=["Coal"]]
collision_layer = 3
collision_mask = 3
input_pickable = true
script = ExtResource("1_5c401")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xg2tj")

[node name="Coal" type="Sprite2D" parent="."]
texture = ExtResource("1_hm1gy")

[node name="grabCooldown" type="Timer" parent="."]
wait_time = 0.2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="grabCooldown" to="." method="_on_grab_cooldown_timeout"]
